[package]
name = "merkletree-rs"
version = "0.0.2"
authors = ["arnaucube <root@arnaucube.com>"]
edition = "2018"
license = "GPL-3.0"
description = "Sparse MerkleTree"
repository = "https://github.com/arnaucube/merkletree-rs"
readme = "README.md"

[dependencies]
tiny-keccak = "1.4.2"
rustc-hex = "1.0.0"
bitreader = "0.3.1"
arrayref = "0.3.5"
byteorder = "1.3.1"
hex = "0.3.2"
rusty-leveldb = "0.2.4"
